# skillscripts

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: release.yml
src/: cli.rs  main.rs  picker.rs  registry.rs  run_command.rs
src/cli/: cli.rs  picker.rs
src/cli/commands/: config.rs  init.rs  list.rs  mod.rs  pick.rs  search.rs  shared.rs  task.rs
src/cli/output/: mod.rs  serialize.rs
src/io/: config_loader.rs  mod.rs  parser.rs  path_utils.rs  scanner.rs
src/model/: config.rs  mod.rs  skill.rs  yaml_view.rs
src/services/: builder.rs  engine.rs  mod.rs  search.rs
src/themes/: github-dark.tmTheme
tests/: cli.rs  cli_config_resolution_test.rs  cli_config_show_test.rs  cli_index_fallback_test.rs  cli_init_test.rs  cli_list_test.rs  cli_search_test.rs  cli_sync_test.rs  cli_task_test.rs
tests/common/: mod.rs
