[package]
name = "skillscripts"
version = "1.0.8"
edition = "2024"
description = "Fast script search and skill retrieval CLI"
license = "MIT"
repository = "https://github.com/gtiders/skillscripts"
readme = "README.md"
keywords = ["cli", "search", "script", "fuzzy", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "skillscripts"
path = "src/main.rs"

[[bin]]
name = "sks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
dunce = "1.0.5"
fuzzy-matcher = "0.3.7"
ignore = "0.4.25"
arboard = "3"
path-clean = "1.0.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
skim = "4.4.0"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
