[package]
name = "sks"
version = "1.0.10"
edition = "2024"
description = "Registry-driven script launcher and picker"
license = "MIT"
repository = "https://github.com/gtiders/sks"
readme = "README.md"
keywords = ["cli", "script", "registry", "launcher", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
dunce = "1.0.5"
path-clean = "1.0.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
skim = "4.4.0"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
